# RoutePilot

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile.backend  README.md  claude_code_minimax_env.sh  compose.yaml  dev.ps1  docker-compose.yml  eslint.config.mjs  install_deps.bat  mypy.ini  next.config.js  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  run_api.py  start_all.bat  start_api.bat  start_frontend.bat  start_services.py  tailwind.config.ts  test_grpc.py  tsconfig.json
agent/: Dockerfile  pyproject.toml  requirements.txt
agent/src/: server.py
agent/src/agent_enhanced/: __init__.py  adaptive_workflow.py  evaluator.py  feedback_loop.py
agent/src/application/: __init__.py  travel_app.py
agent/src/config/: config_manager.py  settings.py
agent/src/core/: __init__.py  agent_state.py  exceptions.py  extended_tools.py  response_generator.py  travel_agent.py  travel_tools.py  workflow_engine.py
agent/src/di/: __init__.py
agent/src/framework/: __init__.py  node_types.py  state_manager.py
agent/src/graph/: __init__.py  builder.py  error_handling.py  memory_integration.py  nodes.py  performance.py  runtime_config.py  state.py
agent/src/infrastructure/: __init__.py  config_hot_reload.py  config_version_manager.py  conversation_store.py  http_client.py  http_pool.py  infra_config.py  monitor.py  (+10 more)
agent/tests/: test_agent_enhanced.py  test_agent_state.py  test_config_manager.py  test_di.py  test_extended_tools.py  test_infrastructure_modules.py  test_llm_client.py  test_memory_integration.py  test_multiagent_collaboration.py  test_multiagent_factory.py  test_multiagent_message_bus.py  test_multiagent_protocols.py  test_production.py  test_workflow_engine.py
agent/travel_agent/: __init__.py  runtime_sources.py
backend/: pyproject.toml
backend/config/: __init__.py  llm_config.yaml.example  server_config.yaml
backend/market_data/: README.md  pyproject.toml
backend/moyuan_web/: bootstrap_app.py  error_handlers.py  main.py
(+1299 files in other folders)
