[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "routepilot-agent-runtime"
version = "1.0.0"
description = "RoutePilot A2A agents, provider gateway, RAG, and deterministic orchestration"
requires-python = ">=3.13"
dependencies = [
    "routepilot-contracts>=0.1.0,<1",
    "a2a-sdk[fastapi]>=1.1.0,<2.0.0",
    "httpx>=0.28.0,<1",
    "pydantic>=2.11.0,<3",
    "SQLAlchemy>=2.0.36,<3",
    "psycopg[binary]>=3.2.3,<4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["travel_agent*"]
