[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "routepilot-api"
version = "1.0.0"
description = "RoutePilot Artifact-first FastAPI control plane"
requires-python = ">=3.13"
dependencies = [
    "routepilot-contracts>=0.1.0,<1",
    "a2a-sdk[fastapi]>=1.1.0,<2.0.0",
    "alembic>=1.14.0,<2",
    "fastapi>=0.116.0,<1",
    "httpx>=0.28.0,<1",
    "psycopg[binary]>=3.2.3,<4",
    "pydantic>=2.11.0,<3",
    "PyJWT[crypto]>=2.10.1,<3",
    "redis>=5.2,<7",
    "SQLAlchemy>=2.0.36,<3",
    "uvicorn[standard]>=0.34.0,<1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["moyuan_web*"]
