[project]
name = "quantpilot-market-data"
version = "0.1.0"
description = "QuantPilot 市场数据后端模块，提供东方财富实时行情能力"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.124.0",
    "httpx[http2]>=0.28.0",
    "pydantic>=2.12.0",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
quantpilot-market-api = "quantpilot_market_data.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "respx>=0.22.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.uv]
python-preference = "managed"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

